--- a/sentify/www/style.css
+++ b/sentify/www/style.css
@@ -7,6 +7,7 @@
 .btn:hover {
 	background-color: #1ed760 !important;
 	border-color: #1ed760 !important;
+	color: #fff;
 }
 
 .navbar, .navbar-nav, .navbar-header, navbar-default, .navbar-static-top {
